libj2gss/NativeFunc.o "multiple definition" link errors with GCC10

XMLWordPrintable

    • b09
    • generic
    • linux

        build-10/support/native/java.security.jgss/libj2gss/NativeFunc.o:(.bss+0x0): multiple definition of `ftab'
        build-10/support/native/java.security.jgss/libj2gss/GSSLibStub.o:(.bss+0x0): first defined here
        build-10/support/native/java.security.jgss/libj2gss/NativeUtil.o:(.bss+0x110): multiple definition of `ftab'
        build-10/support/native/java.security.jgss/libj2gss/GSSLibStub.o:(.bss+0x0): first defined here
        collect2: error: ld returned 1 exit status
        gmake[3]: *** [/home/amptest/jdkbuilds/14-jdk-trunk/build-10/support/modules_libs/java.security.j
        gss/libj2gss.so] Error 1
        gmake[2]: *** [java.security.jgss-libs] Error 1

              Assignee:
              Patrick Zhang (Inactive)
              Reporter:
              Patrick Zhang (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: