8238388: libj2gss/NativeFunc.o "multiple definition" link errors with GCC10

Fixed libj2gss link errors caused by GCC10 default -fno-common

Reviewed-by: weijun